JSPACE-69 Manage frontend schema access per category.

--- a/components/com_jspace/admin/models/forms/record.xml
+++ b/components/com_jspace/admin/models/forms/record.xml
@@ -21,7 +21,7 @@
 	
 	<fieldset 
 		name="details"
-		addFieldPath="administrator/components/com_jspace/models/fields">
+		addfieldpath="administrator/components/com_jspace/models/fields">
 		<field 
 			name="asset_id" 
 			type="hidden" 
