--- a/plugins/content/oai/forms/oai.xml
+++ b/plugins/content/oai/forms/oai.xml
@@ -24,6 +24,15 @@
 				<option value="1">PLG_CONTENT_OAI_METADATA_LINKS</option>
 				<option value="2">PLG_CONTENT_OAI_METADATA_ASSETS</option>
 			</field>
+            
+            <field
+                name="oai_set"
+                type="text"
+                id="oai_set"
+                description="PLG_CONTENT_OAI_FIELD_SET_DESC"
+                filter="string"
+                label="PLG_CONTENT_OAI_FIELD_SET_LABEL"
+                size="30"/>
 		</fieldset>
 	</fields>
 </form>
