--- a/components/com_jspace/admin/models/forms/record.xml
+++ b/components/com_jspace/admin/models/forms/record.xml
@@ -170,5 +170,14 @@
 			size="10" 
 			default="0"
 			readonly="true"/>
+        
+        <field
+            name="tags" 
+            type="tag" 
+            mode="ajax"
+            label="JTAG"
+            description="JTAG_DESC"
+            multiple="true">
+        </field>
 	</fieldset>
 </form>
