--- a/components/com_jspace/admin/models/forms/record.xml
+++ b/components/com_jspace/admin/models/forms/record.xml
@@ -30,13 +30,14 @@
 		<field 
 			name="parentTitle" 
 			type="text"  
-			label="Parent Record" 
+			label="COM_JSPACE_RECORD_PARENT_ID" 
 			description=""
 			class="readonly"
 			readonly="true"/>
 
 		<field 
 			name="parent_id" 
+            label="COM_JSPACE_RECORD_PARENT_ID"
 			type="hidden"  
 			description=""
 			class="readonly"
@@ -179,5 +180,10 @@
             description="JTAG_DESC"
             multiple="true">
         </field>
+        
+        <field
+            name="csvmetadata"
+            type="hidden"
+            label="COM_JSPACE_RECORD_CSVMETADATA_LABEL"/>
 	</fieldset>
 </form>
