JSPACE-86 Complete rework of crosswalk.

--- a/components/com_jspace/admin/models/forms/record.xml
+++ b/components/com_jspace/admin/models/forms/record.xml
@@ -178,8 +178,8 @@
         </field>
         
         <field
-            name="csvmetadata"
+            name="metadatapairs"
             type="hidden"
-            label="COM_JSPACE_RECORD_CSVMETADATA_LABEL"/>
+            label="COM_JSPACE_RECORD_METADATAPAIRS_LABEL"/>
 	</fieldset>
 </form>
