--- a/components/com_jspace/admin/models/forms/harvest.xml
+++ b/components/com_jspace/admin/models/forms/harvest.xml
@@ -53,6 +53,17 @@
                 name="params"
                 label="COM_JSPACE_HARVEST_FIELDSET_ADDITIONALSETTINGS_LABEL">
                 <field 
+                    name="schema" 
+                    type="list" 
+                    label="COM_JSPACE_HARVEST_DEEFAULT_SCHEMA_LABEL"
+                    description="COM_JSPACE_HARVEST_DEEFAULT_SCHEMA_DESC"
+                    filter="string" 
+                    size="1" 
+                    default="record">
+                    <option value="record">Record</option>
+                    <option value="__schemaless__">[No Schema]</option>
+                </field>
+                <field 
                     name="state" 
                     type="list" 
                     label="COM_JSPACE_HARVEST_DEFAULT_STATE_LABEL"
